--- a/user/manifest.yaml
+++ b/user/manifest.yaml
@@ -22,13 +22,8 @@ spec:
    envFrom:
    - configMapRef:
      name: user-config
-   resources:
-    requests:
-     cpu: "100m"
-     memory: "128Mi"
-   limits:
-     cpu: "100m"
-     memory: "128Mi"
+   ports:
+   - containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
