--- a/web/manifest.yaml
+++ b/web/manifest.yaml
@@ -42,3 +42,22 @@ spec:
   - protocol: TCP
     port: 80
     targetPort: 8080
+---
+apiVersion: autoscaling/v2beta2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: web hpa
+  namespace: roboshop
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: web
+  minReplicas: 1
+  maxReplicas: 10
+    - type: object
+      resource:
+        name: cpu
+        target:
+          type: Utilization
+          averageUtilization: 50
